styleing to all pages except the front page

--- a/src/main/webapp/static-files/modules/my.css
+++ b/src/main/webapp/static-files/modules/my.css
@@ -18,3 +18,35 @@ p{
     background: linear-gradient(to bottom right, rgba(200, 223, 230, 0.74), white);
     border-color: rgba(221, 221, 221, 0.44);
 }
+
+.animate-repeat {
+	opacity:1;
+}
+
+.animate-repeat.ng-move,
+.animate-repeat.ng-enter,
+.animate-repeat.ng-leave {
+  transition:all linear 0.5s;
+}
+
+.animate-repeat.ng-leave.ng-leave-active,
+.animate-repeat.ng-move,
+.animate-repeat.ng-enter {
+  opacity:0;
+}
+
+.animate-repeat.ng-leave,
+.animate-repeat.ng-move.ng-move-active,
+.animate-repeat.ng-enter.ng-enter-active {
+  opacity:1;
+}
+
+.animate-show.ng-hide-add, .animate-show.ng-hide-remove {
+  transition: all linear 0.5s;
+}
+
+.animate-show.ng-hide {
+  line-height: 0;
+  opacity: 0;
+  padding: 0 10px;
+}
