--- a/src/main/webapp/static-files/modules/my.css
+++ b/src/main/webapp/static-files/modules/my.css
@@ -64,6 +64,7 @@ p{
 	font-family: 'Montserrat', sans-serif;
 }
 .panel-footer {
+	margin-top: 5px;
     background-color: #fff;
     text-align: right;
 }
